# file_cipher

./: LICENSE.md  README.md  pyproject.toml
.forgejo/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.forgejo/workflows/: release.yml
src/cipher/: cli.py  crypto.py  password.py  utils.py
src/file_cipher/: cli.py
tests/: test_cli.py  test_crypto.py  test_password.py
