[project]
name = "file-cipher"
version = "0.4.0"
description = "Command-line tool for file encryption"
readme = "README.md"
authors = [
    { name = "GautierPicon", email = "bt2ay5d9@anonaddy.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.7",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
cipher = "file_cipher.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
