[project]
name = "cipher"
version = "1.0.1"
description = "Command-line tool for file encryption"
readme = "README.md"
authors = [
    { name = "GautierPicon", email = "bt2ay5d9@anonaddy.com" }
]
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=46.0.7",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
cipher = "cipher.cli:app"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-watch>=4.2.0",
]
